--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,7 @@
 body {
   font-family: Avenir, sans-serif;
   font-weight: 300;
-  margin: 20px;
+  margin: 0;
+  padding: 20px;
   box-sizing: border-box;
 }
